--- a/backend/microservices/media-service/pom.xml
+++ b/backend/microservices/media-service/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.adventure-it</groupId>
-		<artifactId>adventure-backend</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath> <!-- lookup parent locally -->
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.5.0</version>
 	</parent>
 	<artifactId>media-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
