feat(deployment): Docker integration
- Created dockerfiles for each system component
- Used environment variables throughout backend
- Created a docker-compose.yml to spin up all images for a local installation

--- a/backend/service-registry/src/main/resources/application.yml
+++ b/backend/service-registry/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 server:
   port: ${service-registry-server.port}
 
+spring:
+  name: ${service-registry-server.application-name}
+
 eureka: ${service-registry-server.eureka}
