--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.5.0</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.adventure-it</groupId>
     <artifactId>adventure-backend</artifactId>
@@ -20,7 +20,6 @@
         <module>microservices/location-service</module>
         <module>microservices/media-service</module>
         <module>microservices/notification-service</module>
-        <module>microservices/sharing-service</module>
         <module>microservices/user-service</module>
         <module>microservices/checklist-service</module>
         <module>microservices/itinerary-service</module>
