--- a/frontend/adventure_it/pubspec.yaml
+++ b/frontend/adventure_it/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   flutter_downloader: ^1.6.1
   file_picker: ^4.0.0
   http_parser: ^4.0.0
+  location: ^4.3.0
   flutter_staggered_grid_view: ^0.4.0
+  carousel_slider: ^4.0.0
   path_provider: ^2.0.2
   downloads_path_provider: ^0.1.0
   filesystem_picker: ^2.0.0-nullsafety.0
