feat(recommendation-service): implemented framework for RecommendationService

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,6 +20,7 @@
         <module>microservices/location-service</module>
         <module>microservices/media-service</module>
         <module>microservices/notification-service</module>
+        <module>microservices/recommendation-service</module>
         <module>microservices/user-service</module>
         <module>microservices/checklist-service</module>
         <module>microservices/itinerary-service</module>
