--- a/frontend/adventure_it/pubspec.yaml
+++ b/frontend/adventure_it/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   file_picker: ^4.0.0
   http_parser: ^4.0.0
   location: ^4.3.0
+  google_maps_flutter: ^2.0.8
   flutter_staggered_grid_view: ^0.4.0
   carousel_slider: ^4.0.0
+  geocoder: ^0.2.1
+  intl: ^0.17.0
   path_provider: ^2.0.2
   downloads_path_provider: ^0.1.0
   filesystem_picker: ^2.0.0-nullsafety.0
