--- a/frontend/adventure_it/pubspec.yaml
+++ b/frontend/adventure_it/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geocoder: ^0.2.1
   intl: ^0.17.0
   path_provider: ^2.0.2
+  google_maps_flutter_web: ^0.3.0+4
   downloads_path_provider: ^0.1.0
   filesystem_picker: ^2.0.0-nullsafety.0
   # The following adds the Cupertino Icons font to your application.
