Android Gradle Error

--- a/frontend/adventure_it/android/app/src/main/AndroidManifest.xml
+++ b/frontend/adventure_it/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
         android:label="adventure_it"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true">
+    <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyD8xsVljufOFTmpnVZI2KzobIdAvKjWdTE"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
