--- a/backend/microservices/recommendation-service/pom.xml
+++ b/backend/microservices/recommendation-service/pom.xml
@@ -72,7 +72,11 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.10.5</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.ejml</groupId>
+			<artifactId>ejml-all</artifactId>
+			<version>0.41</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
