--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,8 +5,18 @@ volumes:
 services:
   resolve-and-build:
     build: .
+    network_mode: host
     volumes:
       - shared-volume:/env/
+  service-registry:
+    build: service-registry
+    network_mode: host
+    environment:
+      - spring.config.import=file:/env/backend-environment.yml
+    volumes:
+      - shared-volume:/env/
+    depends_on:
+      - resolve-and-build
   db:
     image: postgres
     network_mode: host
@@ -15,6 +25,9 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_DATABASE}
+    depends_on:
+      - resolve-and-build
+      - service-registry
   keycloak:
     image: jboss/keycloak
     network_mode: host
@@ -29,23 +42,15 @@ services:
       KEYCLOAK_PASSWORD: ${keycloak_PASSWORD}
     depends_on:
       - resolve-and-build
+      - service-registry
       - db
-  service-registry:
-    build: service-registry
-    environment:
-      - spring.config.import=file:/env/backend-environment.yml
-    volumes:
-      - shared-volume:/env/
-    network_mode: host
-    depends_on:
-      - resolve-and-build
   adventure-microservice:
     build: microservices/adventure-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -53,11 +58,11 @@ services:
       - db
   budget-microservice:
     build: microservices/budget-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -65,11 +70,11 @@ services:
       - db
   chat-microservice:
     build: microservices/chat-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -77,11 +82,11 @@ services:
       - db
   checklist-microservice:
     build: microservices/checklist-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -89,11 +94,11 @@ services:
       - db
   itinerary-microservice:
     build: microservices/itinerary-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -101,11 +106,11 @@ services:
       - db
   location-microservice:
     build: microservices/location-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -113,11 +118,11 @@ services:
       - db
   media-microservice:
     build: microservices/media-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -125,11 +130,11 @@ services:
       - db
   notification-microservice:
     build: microservices/notification-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -137,11 +142,11 @@ services:
       - db
   timeline-microservice:
     build: microservices/timeline-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
@@ -149,11 +154,11 @@ services:
       - db
   user-microservice:
     build: microservices/user-service
+    network_mode: host
     environment:
       - spring.config.import=file:/env/backend-environment.yml
     volumes:
       - shared-volume:/env/
-    network_mode: host
     depends_on:
       - resolve-and-build
       - service-registry
