--- a/backend/microservices/adventure-service/pom.xml
+++ b/backend/microservices/adventure-service/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>byte-buddy-agent</artifactId>
 			<version>1.10.22</version>
 		</dependency>
+		<dependency>
+			<groupId>com.adventure-it</groupId>
+			<artifactId>sharedDTOs</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
