--- a/backend/microservices/chat-service/pom.xml
+++ b/backend/microservices/chat-service/pom.xml
@@ -54,7 +54,13 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>sharedDTOs</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
