--- a/frontend/adventure_it/pubspec.yaml
+++ b/frontend/adventure_it/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   file_picker: ^4.0.0
   http_parser: ^4.0.0
   location: ^4.3.0
+  cached_network_image: ^3.1.0
   google_maps_flutter: ^2.0.8
   flutter_staggered_grid_view: ^0.4.0
   carousel_slider: ^4.0.0
