fix(microservice-dependencies): Included missing sharedDTOs dependency

--- a/backend/sharedDTOs/pom.xml
+++ b/backend/sharedDTOs/pom.xml
@@ -41,6 +41,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+            <version>2.4.7</version>
+        </dependency>
     </dependencies>
 
     <build>
