--- a/backend/microservices/adventure-service/pom.xml
+++ b/backend/microservices/adventure-service/pom.xml
@@ -73,6 +73,21 @@
 			<version>1.10.22</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.adventure-it</groupId>
 			<artifactId>sharedDTOs</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
