--- a/backend/microservices/checklist-service/pom.xml
+++ b/backend/microservices/checklist-service/pom.xml
@@ -53,6 +53,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.adventure-it</groupId>
+			<artifactId>sharedDTOs</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -63,12 +69,6 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>com.adventure-it</groupId>
-				<artifactId>adventure-service</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
-				<scope>compile</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
