Got rid of errors from merging Spring_Seven into MediaFirebaseImplementation

--- a/backend/microservices/checklist-service/pom.xml
+++ b/backend/microservices/checklist-service/pom.xml
@@ -53,7 +53,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <artifactId>sharedDTOs</artifactId>
+            <groupId>com.adventure-it</groupId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
