--- a/backend/keycloak/docker-compose.yml
+++ b/backend/keycloak/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   keycloak:
     image: jboss/keycloak
     network_mode: host
+    command: ["-Djboss.bind.address.private=127.0.0.1 -Djboss.bind.address=0.0.0.0"]
     environment:
       DB_VENDOR: ${keycloak_DB_VENDOR}
       DB_ADDR: ${keycloak_DB_ADDR}
