--- a/backend/microservices/user-service/src/main/resources/application.yml
+++ b/backend/microservices/user-service/src/main/resources/application.yml
@@ -1,33 +1,10 @@
 server:
-  port: 9002
+  port: ${user-microservice.port}
   error:
     include-message: always
 
 spring:
   application:
-    name: USER-SERVICE
-  datasource:
-    url: jdbc:postgresql://adventure-it-db.c9gozrkqo8dv.us-east-2.rds.amazonaws.com/adventureit
-    username: postgres
-    password: 310PB!Gq%f&J
-    hikari:
-      maximum-pool-size: 2
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      hostname: localhost
     name: ${user-microservice.application-name}
   datasource: ${user-microservice.datasource}
   jpa: ${user-microservice.jpa}
