feat(User-service):Updated application.yml for all microservices

--- a/backend/main-controller/src/main/resources/application.yml
+++ b/backend/main-controller/src/main/resources/application.yml
@@ -4,6 +4,20 @@ server:
 spring:
   application:
     name: ${main-controller.application-name}
-  security: ${keycloak}
+  security:
+      oauth2:
+        resourceserver:
+          jwt:
+            issuer-uri: ${keycloak.oauth2.resourceserver.jwt.issuer-uri}
 
-eureka: ${service-registry-client}
+
+eureka:
+  client:
+    register-with-eureka: ${service-registry-client.client.register-with-eureka}
+    fetch-registry: ${service-registry-client.client.fetch-registry}
+    service-url:
+      defaultZone: ${service-registry-client.client.service-url.defaultZone}
+  instance:
+    hostname: ${service-registry-client.client.hostname}
+
+
