--- a/backend/microservices/recommendation-service/src/main/resources/application.yml
+++ b/backend/microservices/recommendation-service/src/main/resources/application.yml
@@ -6,8 +6,28 @@ server:
 spring:
     application:
         name: ${recommendation-microservice.application-name}
-    datasource: ${recommendation-microservice.datasource}
-    jpa: ${recommendation-microservice.jpa}
+    datasource:
+        url: ${recommendation-microservice.datasource.url}
+        username: ${recommendation-microservice.datasource.username}
+        password: ${recommendation-microservice.datasource.password}
+        hikari:
+            maximum-pool-size: ${recommendation-microservice.datasource.hikari.maximum-pool-size}
+    jpa:
+        hibernate:
+            ddl-auto: ${recommendation-microservice.jpa.hibernate.ddl-auto}
+        show-sql: ${recommendation-microservice.jpa.show-sql}
+        properties:
+            hibernate:
+                dialect: ${recommendation-microservice.jpa.hibernate.properties.hibernate.dialect}
+                format_sql: ${recommendation-microservice.jpa.hibernate.properties.hibernate.format_sql}
 
-eureka: ${recommendation-microservice-client}
+eureka:
+    client:
+        register-with-eureka: ${service-registry-client.client.register-with-eureka}
+        fetch-registry: ${service-registry-client.client.fetch-registry}
+        service-url:
+            defaultZone: ${service-registry-client.client.service-url.defaultZone}
+    instance:
+        hostname: ${service-registry-client.client.hostname}
+
 
