feat(User-service):Updated application.yml for all microservices

--- a/backend/backend-environment.yml
+++ b/backend/backend-environment.yml
@@ -15,6 +15,8 @@ service-registry-client:
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
 
 # Service Registry (server)
 service-registry-server:
