--- a/.github/workflows/budget-service.yml
+++ b/.github/workflows/budget-service.yml
@@ -1,13 +1,13 @@
 name: Budget Microservice - Tests
 
-on:
-  push:
-    branches:
-      - master
-      - development
-      - sprint*
-      - Sprint*
-  workflow_dispatch:
+on: workflow_dispatch
+#   push:
+#     branches:
+#       - master
+#       - development
+#       - sprint*
+#       - Sprint*
+  
 
 jobs:
   build:
