--- a/frontend/adventure_it/pubspec.yaml
+++ b/frontend/adventure_it/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^3.1.0
   google_maps_flutter: ^2.0.8
   flutter_staggered_grid_view: ^0.4.0
+  maps_launcher: ^2.0.1
   carousel_slider: ^4.0.0
   geocoder: ^0.2.1
   intl: ^0.17.0
