--- a/backend/microservices/media-service/pom.xml
+++ b/backend/microservices/media-service/pom.xml
@@ -75,6 +75,24 @@
 			<artifactId>firebase-admin</artifactId>
 			<version>7.0.1</version>
 		</dependency>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>sharedDTOs</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>com.adventure-it</groupId>
+			<artifactId>sharedDTOs</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+        <dependency>
+            <groupId>com.adventure-it</groupId>
+            <artifactId>sharedDTOs</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
