--- a/frontend/adventure_it/pubspec.yaml
+++ b/frontend/adventure_it/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.0
   maps_launcher: ^2.0.1
   carousel_slider: ^4.0.0
+  firebase_messaging: ^10.0.7
+  firebase_core: ^1.6.0
   geocoder: ^0.2.1
   intl: ^0.17.0
   path_provider: ^2.0.2
