--- a/frontend/adventure_it/android/app/build.gradle
+++ b/frontend/adventure_it/android/app/build.gradle
@@ -34,7 +34,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.adventure_it"
+        applicationId "com.adventureit"
         minSdkVersion 20
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
