--- a/.github/workflows/adventure-microservice.yml
+++ b/.github/workflows/adventure-microservice.yml
@@ -1,13 +1,14 @@
 name: Adventure Microservice - Tests
 
 on:
-  push:
-    branches:
-      - master
-      - development
-      - sprint*
-      - Sprint*
-  workflow_dispatch:
+  workflow_dispatch
+#   push:
+#     branches:
+#       - master
+#       - development
+#       - sprint*
+#       - Sprint*
+#   workflow_dispatch:
 
 jobs:
   build:
@@ -16,13 +17,31 @@ jobs:
     steps:
       - name: Get Repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Set Up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: "11"
           distribution: "adopt"
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=COS301-SE-2021_Adventure-IT
       - name: Build with Maven
-
         working-directory: backend/microservices/adventure-service
         run: |
           chmod +x ./mvnw
