--- a/.github/workflows/adventure-microservice.yml
+++ b/.github/workflows/adventure-microservice.yml
@@ -41,11 +41,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=COS301-SE-2021_Adventure-IT
-      - name: Build with Maven
-        working-directory: backend/microservices/adventure-service
-        run: |
-          chmod +x ./mvnw
-          ./mvnw clean
-          ./mvnw --batch-mode test
+#       - name: Build with Maven
+#         working-directory: backend/microservices/adventure-service
+#         run: |
+#           chmod +x ./mvnw
+#           ./mvnw clean
+#           ./mvnw --batch-mode test
           
 
