--- a/.github/workflows/adventure-microservice.yml
+++ b/.github/workflows/adventure-microservice.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           mvn -f backend/microservices/adventure-service/pom.xml
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=COS301-SE-2021_Adventure-IT
-
+          mvn install
 # jobs:
 #   build:
 #     runs-on: ubuntu-latest
