feat(Main-controller):edit pom file

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -36,6 +36,7 @@
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <build>
+        <defaultGoal>install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
