--- a/backend/microservices/adventure-service/pom.xml
+++ b/backend/microservices/adventure-service/pom.xml
@@ -18,12 +18,6 @@
 		<sonar.organization>cos301-se-2021</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
-	<repositories>
-		<repository>
-			<id>Adventure IT</id>
-			<url>https://github.com/COS301-SE-2021/Adventure-IT</url>
-		</repository>
-	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -99,7 +93,10 @@
 			<groupId>com.adventure-it</groupId>
 			<artifactId>sharedDTOs</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
