--- a/backend/microservices/notification-service/src/main/resources/application.yml
+++ b/backend/microservices/notification-service/src/main/resources/application.yml
@@ -6,21 +6,21 @@ server:
 
 spring:
   application:
-    name: ${chat-microservice.application-name}
+    name: ${notification-microservice.application-name}
   datasource:
-    url: ${chat-microservice.datasource.url}
-    username: ${chat-microservice.datasource.username}
-    password: ${chat-microservice.datasource.password}
+    url: ${notification-microservice.datasource.url}
+    username: ${notification-microservice.datasource.username}
+    password: ${notification-microservice.datasource.password}
     hikari:
-      maximum-pool-size: ${chat-microservice.datasource.hikari.maximum-pool-size}
+      maximum-pool-size: ${notification-microservice.datasource.hikari.maximum-pool-size}
   jpa:
     hibernate:
-      ddl-auto: ${chat-microservice.jpa.hibernate.ddl-auto}
-    show-sql: ${chat-microservice.jpa.show-sql}
+      ddl-auto: ${notification-microservice.jpa.hibernate.ddl-auto}
+    show-sql: ${notification-microservice.jpa.show-sql}
     properties:
       hibernate:
-        dialect: ${chat-microservice.jpa.hibernate.properties.hibernate.dialect}
-        format_sql: ${chat-microservice.jpa.hibernate.properties.hibernate.format_sql}
+        dialect: ${notification-microservice.jpa.hibernate.properties.hibernate.dialect}
+        format_sql: ${notification-microservice.jpa.hibernate.properties.hibernate.format_sql}
   mail:
     host: ${notification-microservice.mail.host}
     port: ${notification-microservice.mail.port}
