--- a/.github/workflows/adventure-microservice.yml
+++ b/.github/workflows/adventure-microservice.yml
@@ -39,11 +39,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
+        run: 
           mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=COS301-SE-2021_Adventure-IT
-          chmod +x ./mvnw
-          ./mvnw clean
-          ./mvnw --batch-mode test -Dspring.config.import=file:./backend-environment.yml
+
 # jobs:
 #   build:
 #     runs-on: ubuntu-latest
