fix(CI/CD): made changes to microservice docker files

--- a/backend/main-controller/dockerfile
+++ b/backend/main-controller/dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:11-jre
 COPY --from=backend_resolve-and-build:latest /dependencies/main-controller/target/main-controller-0.0.1-SNAPSHOT.jar .
-ENTRYPOINT ["java", "-jar", "./main-controller-0.0.1-SNAPSHOT.jar"]
+COPY --from=backend_resolve-and-build:latest /env/backend-environment.yml /env/backend-environment.yml
+ENTRYPOINT ["java", "-Dspring.config.import=file:/env/backend-environment.yml", "-jar", "./main-controller-0.0.1-SNAPSHOT.jar"]
 
 
