--- a/backend/microservices/notification-service/dockerfile
+++ b/backend/microservices/notification-service/dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:11-jre
 COPY --from=backend_resolve-and-build:latest /dependencies/microservices/notification-service/target/notification-service-0.0.1-SNAPSHOT.jar .
-ENTRYPOINT ["java", "-jar", "./notification-service-0.0.1-SNAPSHOT.jar"]
+COPY --from=backend_resolve-and-build:latest /env/backend-environment.yml /env/backend-environment.yml
+ENTRYPOINT ["java", "-Dspring.config.import=file:/env/backend-environment.yml", "-jar", "./notification-service-0.0.1-SNAPSHOT.jar"]
 
 
