--- a/backend/microservices/timeline-service/dockerfile
+++ b/backend/microservices/timeline-service/dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:11-jre
 COPY --from=backend_resolve-and-build:latest /dependencies/microservices/timeline-service/target/timeline-service-0.0.1-SNAPSHOT.jar .
-ENTRYPOINT ["java", "-jar", "./timeline-service-0.0.1-SNAPSHOT.jar"]
+COPY --from=backend_resolve-and-build:latest /env/backend-environment.yml /env/backend-environment.yml
+ENTRYPOINT ["java", "-Dspring.config.import=file:/env/backend-environment.yml", "-jar", "./timeline-service-0.0.1-SNAPSHOT.jar"]
 
